--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "MyModule/NewMod",
+    "name": "sMyModule/NewMod",
     "type": "library",
     "description": "Simple Composer",
     "license": "MIT",
