--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,17 @@
 {
     "name": "codModVend/codMod",
     "type": "library",
-    "description": "Logging for PHP 5.3",
+    "description": "Cod Module",
     "keywords": ["log","logging"],
-    "homepage": "https://github.com/Seldaek/monolog",
     "license": "MIT",
     "authors": [
         {
-            "name": "Jordi Boggiano",
-            "email": "j.boggiano@seld.be",
-            "homepage": "http://seld.be",
+            "name": "Rajath SB",
+            "email": "rajath402@gmail.com",
             "role": "Developer"
         }
     ],
     "require": {
         "php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Monolog": "src"
-        }
     }
 }
